--- a/Grid1.html
+++ b/Grid1.html
@@ -63,8 +63,23 @@
 </nav>
 
     <main class="flex-shrink-0">
-        <div class="container">
-           
+        <div class="container h-100 minHeight">
+           <div class="row row-cols-1 row-cols-md-2 gy-2 h-100">
+                <div class="col">
+                    <div class="bg-dark text-light h-100 p-2">
+                        <h1>COL ONE</h1>
+                        <p>Lorem ipsum dolor sit amet. Ut maiores sunt <strong>Et molestiae</strong> est laborum accusantium. Aut doloremque assumenda <em>Sed molestiae et blanditiis nostrum a inventore illo</em> sed quam culpa. </p>
+                        <p>Ut fugiat dicta <strong>Nam enim</strong> et autem expedita. Ea sunt dolorEt Quis eum eaque voluptatem ut fugiat vero est iure dolore et dolores eligendi. Est fuga accusantium cum nemo quisquam <em>Est voluptatem in maiores quia cum inventore necessitatibus ut corporis accusantium</em> sit excepturi assumenda. Ut temporibus nihil est dolorem laudantiumAut distinctio sit ducimus dolor et porro sint eos omnis eius ex corrupti quis. </p>
+                        <p>Vel ipsa nobis <em>Est neque vel omnis assumenda</em>? Rem nihil doloremQuo aliquid aut temporibus aperiam quo quis consequatur. In dignissimos deserunt ut adipisci rerumSit facilis ea tenetur quia. </p>
+                    </div>
+                </div>
+                    
+                <div class="col">
+                    <div class="bg-secondary text-light h-100 p-2">
+                        <h1>COL TWO</h1>
+                    </div>
+                </div>
+           </div>
         </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
