--- a/Grid2.html
+++ b/Grid2.html
@@ -63,8 +63,20 @@
 </nav>
 
     <main class="flex-shrink-0">
-        <div class="container">
-           
+        <div class="container h-100 minHeight">
+           <div class="row gx-2 h-100">
+                <div class="col-4">
+                    <div class="bg-secondary text-light h-100">
+                        <h5>Side Bar</h5>
+                    </div>
+                </div>
+
+                <div class="col-8">
+                    <div class="bg-dark text-light h-100">
+                        <h5>Main</h5>
+                    </div>
+                </div>
+           </div>
         </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
