--- a/Grid3.html
+++ b/Grid3.html
@@ -63,8 +63,29 @@
 </nav>
 
     <main class="flex-shrink-0">
-        <div class="container">
-           
+        <div class="container h-100 minHeight">
+           <div class="row">
+                <!-- LEFT COL -->
+                <div class="col-7">
+                    <div class="bg-secondary text-light p-2">
+
+                    </div>
+                </div>
+                <!-- RIGHT COL -->
+                <div class="col-5">
+                    <!-- RIGHT TOP -->
+                    <div class="bg-dark text-light h-50">
+                    </div>
+
+                    <!-- RIGHT BOTTOM -->
+                    <div class="bg-dark text-light h-50 mt-2">
+                    </div>
+
+                    <div>
+                        <button class="btn btn-light" type="button">Read More</button>
+                    </div>
+                </div>
+           </div>
         </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
