nimisha check up
nimisha check up

--- a/Grid3.html
+++ b/Grid3.html
@@ -64,25 +64,35 @@
 
     <main class="flex-shrink-0">
         <div class="container h-100 minHeight">
-           <div class="row">
+           <div class="row h-100">
                 <!-- LEFT COL -->
-                <div class="col-7">
-                    <div class="bg-secondary text-light p-2">
-
+                <div class="col-7 h-100">
+                    <div class="bg-secondary text-light p-2 h-100">
+                        <p>
+                            VInay Jain is a coder
+                        </p>
                     </div>
                 </div>
                 <!-- RIGHT COL -->
-                <div class="col-5">
+                <div class="col-5 h-110">
                     <!-- RIGHT TOP -->
                     <div class="bg-dark text-light h-50">
+                        <p>
+                            vinay jain is the sdncfiewfniwe
+                        </p>
                     </div>
 
-                    <!-- RIGHT BOTTOM -->
-                    <div class="bg-dark text-light h-50 mt-2">
-                    </div>
+                    <div class="h-50">
+                        <!-- RIGHT BOTTOM -->
+                        <div class="bg-dark text-light h-50">
+                            <p class="m-0">
+                                ssdsdcs
+                            </p>
+                        </div>
 
-                    <div>
-                        <button class="btn btn-light" type="button">Read More</button>
+                        <div class="bg-dark text-light border border-top h-50">
+                            <button class="btn btn-light" type="button">Read More</button>
+                        </div>
                     </div>
                 </div>
            </div>
