--- a/Grid3.html
+++ b/Grid3.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-140">
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -66,7 +66,7 @@
         <div class="container h-100 minHeight">
            <div class="row h-100">
                 <!-- LEFT COL -->
-                <div class="col-7 h-100">
+                <div class="col-7 h-120">
                     <div class="bg-secondary text-light p-2 h-100">
                         <p>
                             VInay Jain is a coder
@@ -74,23 +74,37 @@
                     </div>
                 </div>
                 <!-- RIGHT COL -->
-                <div class="col-5 h-110">
+                <div class="col-5 h-100">
                     <!-- RIGHT TOP -->
-                    <div class="bg-dark text-light h-50">
+                    <div class="bg-dark text-light h-50 p-2">
                         <p>
                             vinay jain is the sdncfiewfniwe
                         </p>
                     </div>
 
+                    <!-- RIGHT BOTTOM -->
                     <div class="h-50">
-                        <!-- RIGHT BOTTOM -->
-                        <div class="bg-dark text-light h-50">
-                            <p class="m-0">
-                                ssdsdcs
+                        <div class="bg-dark text-light h-100 mt-2 p-2 overflow-auto">
+                            <p>
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                vsdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                vsdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
+                                sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
                             </p>
                         </div>
 
-                        <div class="bg-dark text-light border border-top h-50">
+                        <div class="bg-dark text-light border border-top p-2">
                             <button class="btn btn-light" type="button">Read More</button>
                         </div>
                     </div>
@@ -98,6 +112,17 @@
            </div>
         </div>
     </main>
+    
+    <!-- <div class="row h-30">
+        <div class="col-7">
+
+        </div>
+        <div class="col-5">
+            <div class="bg-dark text-light border border-top p-2">
+                <button class="btn btn-light" type="button">Read More</button>
+            </div>
+        </div>
+    </div> -->
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
             <span class="text-white">Bootstrap And The Grids By Vinay Jain</span>
