--- a/Grid3.html
+++ b/Grid3.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Bootstrap And The Grids: Grid 3</title>
+    <title>Contact Form</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -74,9 +74,9 @@
                     </div>
                 </div>
                 <!-- RIGHT COL -->
-                <div class="col-5 h-120">
+                <div class="col-5 h-120 d-flex flex-column justify-content-evenly">
                     <!-- RIGHT TOP -->
-                    <div class="bg-dark text-light h-50 p-2">
+                    <div class="bg-dark text-light h-50 p-4">
                         <p>
                             vinay jain is the sdncfiewfniwe
                         </p>
@@ -84,7 +84,7 @@
 
                     <!-- RIGHT BOTTOM -->
                     <div class="h-50">
-                        <div class="bg-dark text-light h-100 mt-2 p-2 overflow-auto">
+                        <div class="bg-dark text-light h-70 mt-2 p-4 overflow-auto">
                             <p>
                                 sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
                                 sdfdsfsdf dsfdsf sfvsfbr shgesdargbafv.
